Fixed width jumping

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     min-height: 10vh;
     background-color:#f0f0f0;
     position:fixed;
+    min-width: 100vw;
 }
 
 code {
